Update README.md to use conda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
-  "python.formatting.provider": "autopep8"
+  "python.formatting.provider": "black",
+  "python.pythonPath": "/usr/local/anaconda3/envs/random-problem-set/bin/python"
 }
